--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         eum?
     </p>
     <a href="https://www.lipsum.com/">
-        <button>Lern More</button>
+        <button>Learn More</button>
     </a>
     <h2>landscape</h2>
     <img src="https://picsum.photos/seed/picsum/200/300" alt="Image"/>
