--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         cum nemo minima distinctio, repellat alias dolorem repellendus exercitationem facere quam iusto ducimus iste
         eum?
     </p>
-    <a href="https://www.lipsum.com/">
-        <button>Learn More</button>
-    </a>
+        <button>
+            <a href="https://www.lipsum.com/">Learn More</a>
+    </button>
+    
     <h2>landscape</h2>
     <img src="https://picsum.photos/seed/picsum/200/300" alt="Image"/>
     <h3>Ordered List</h3>
